fix z-index for year and month buttom

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -36,6 +36,9 @@
   height: 202px;
 }
 
+a.waves-effect.waves.btn-flat {
+  z-index: 1003;
+}
 
 canvas {
   margin: 2em;
